[package]
name = "wlangc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log.workspace = true
simplelog.workspace = true
chumsky.workspace = true
ariadne.workspace = true
thiserror.workspace = true
clap.workspace = true

[lints]
workspace = true
